--- a/styles/device.css
+++ b/styles/device.css
@@ -2,6 +2,9 @@
 #header-title {
     min-height: 0px;
 }
+.question-band.summaryoptions {
+    margin-left: 9% !important;
+}
 }
 @media screen and (max-width : 1024px) {
 }
@@ -55,7 +58,10 @@
     .intro-content {
         margin: 0% 4%;
     }
-
+    .input-url {
+        width: 325px !important;
+        height: 16px;
+    }
     h1 {
         font-size: 22px;
     }
@@ -71,6 +77,10 @@
 @media screen and (max-width : 500px) {
     h1 {
         font-size: 20px;
+    }
+    .input-url {
+        width: 325px !important;
+        height: 19px;
     }
 
     .header-informarion p, .header-informarion div, .header-informarion span, .closehintlink {
@@ -98,10 +108,31 @@
     .question-band{
         margin-left: 13%;
     }
+    .questioninnerwrapper{
+        padding-right: 7px;
+    }
 
+    .header-content-dock * {
+        font-size: 13px;
+    }
+    .header-content-dock .progressdiv{
+        margin-top:4px;
+    }
+
+    .header-content-dock .hintlinkspan{
+        vertical-align: super;
+    }
 }
 
-@media screen and (max-width : 480px) {  
+@media screen and (max-width : 480px) {
+
+    #header-title:not(.startpage) img {
+        /*display: none;*/
+      
+    }
+    .statpageheadmargin{
+        /*margin-top:60px !important;*/   
+    }
   
     .question-band{
         margin-left: 17%;
