--- a/styles/module.css
+++ b/styles/module.css
@@ -531,17 +531,23 @@
 
 
 @media all and (-ms-high-contrast:none){
-  
+    .iscorrect { margin-top: 5px } /* IE10 */
+    .hintlink { left:66% } 
+     *::-ms-backdrop, .iscorrect { margin-top: 5px }  /* IE11 */
+     *::-ms-backdrop, .hintlink { left:66% }  /* IE11 */
      
      legend{      width:95%    }
-     *::-ms-backdrop, legend { margin-top: 5px }  /* IE11 */
+     *::-ms-backdrop, .legend { width:95% }  /* IE11 */
+  
 }
 
 @supports (-ms-accelerator:true) {
-  
+    .iscorrect { margin-top: 5px } 
+
     legend{
-        width:95%
+        width:90%
     }
+    .hintlink { left:66% } 
 }
 
 
@@ -549,7 +555,7 @@
     legend{
         width:95%
     }
-   
+    .iscorrect { margin-top: 5px } 
 
   
     .hintlink { left:66% } 
