--- a/styles/layout.css
+++ b/styles/layout.css
@@ -169,6 +169,7 @@ button:active, textarea:active, select:active,
     height: auto;
     z-index: 10;
     margin-top: 8px;
+    position: relative;
 }
 
     #header-progress .progress, .header-content-dock .progress{
@@ -433,4 +434,8 @@ button:active, textarea:active, select:active,
 
 .closehintdoc{
     margin-right:10px;
+}
+
+.wrapper-img{
+    position: relative;
 }
