--- a/styles/module.css
+++ b/styles/module.css
@@ -194,7 +194,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 25px;
+    /* margin-bottom: 25px; */
 }
 .hotspotclicked{
     background-color:#33A7C0 !important;
@@ -514,14 +514,28 @@
 #Summary .inpputtext{
    margin: 0px !important;
 }
-   /*Presenter Mode css start*/
-.presentationModeFooter, .ScormReviewFooter {
+/*Presenter Mode css start*/
+ .ScormReviewFooter {
     display: inline-block;
     background-color: #1a76cb;
     height: 29px;
     width: 100%;
     color: white;
     text-align: center;
+}
+.presentationModeFooter {
+    display: inline-block;
+    background-color: #047a9c;
+    height: 21px;
+    width: 135px;
+    color: white;
+    text-align: center;
+    /* float: left; */
+    position: absolute;
+    left: 0%;
+    top: 0;
+    padding: 3px;
+    font-size: 14px;
 }
 .accessibility{
     font-size: 0;
